After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 701586 - rtspsrc memleak
rtspsrc memleak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.0.8
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-06-04 12:02 UTC by Nicola
Modified: 2013-06-05 10:15 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Nicola 2013-06-04 12:02:24 UTC
using this pipeline:

gst-launch-1.0 -ev rtspsrc location=rtsp://root:pass@192.168.2.238:554/axis-media/media.amp ! rtph264depay ! fakesink silent=false

valgrind show the following leaks:

==29248== 10 bytes in 1 blocks are definitely lost in loss record 251 of 4,237
==29248==    at 0x4C2B6CD: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so)
==29248==    by 0x53CEA78: g_malloc (gmem.c:159)
==29248==    by 0x53E32DD: g_strdup (gstrfuncs.c:356)
==29248==    by 0xE6B4DD1: gst_udpsink_init (gstudpsink.c:105)
==29248==    by 0x5162956: g_type_create_instance (gtype.c:1892)
==29248==    by 0x51470B8: g_object_constructor (gobject.c:1849)
==29248==    by 0x51486E3: g_object_newv (gobject.c:1713)
==29248==    by 0x4E81868: gst_element_factory_create (gstelementfactory.c:377)
==29248==    by 0x4EC94A3: gst_element_make_from_uri (gsturi.c:603)
==29248==    by 0x85AEE94: gst_rtspsrc_stream_configure_transport (gstrtspsrc.c:3060)
==29248==    by 0x85B268D: gst_rtspsrc_setup_streams (gstrtspsrc.c:5507)
==29248==    by 0x85B42DE: gst_rtspsrc_open (gstrtspsrc.c:5841)
==29248==    by 0x85B833C: gst_rtspsrc_thread (gstrtspsrc.c:6815)
==29248==    by 0x4EC4ACE: gst_task_func (gsttask.c:316)
==29248==    by 0x53EB247: g_thread_pool_thread_proxy (gthreadpool.c:309)
==29248==    by 0x53EA9E4: g_thread_proxy (gthread.c:801)
==29248==    by 0x567DE99: start_thread (pthread_create.c:308)
==29248== 
==29248== 10 bytes in 1 blocks are definitely lost in loss record 252 of 4,237
==29248==    at 0x4C2B6CD: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so)
==29248==    by 0x53CEA78: g_malloc (gmem.c:159)
==29248==    by 0x53E32DD: g_strdup (gstrfuncs.c:356)
==29248==    by 0xE6B4DD1: gst_udpsink_init (gstudpsink.c:105)
==29248==    by 0x5162956: g_type_create_instance (gtype.c:1892)
==29248==    by 0x51470B8: g_object_constructor (gobject.c:1849)
==29248==    by 0x51486E3: g_object_newv (gobject.c:1713)
==29248==    by 0x4E81868: gst_element_factory_create (gstelementfactory.c:377)
==29248==    by 0x4EC94A3: gst_element_make_from_uri (gsturi.c:603)
==29248==    by 0x85AF132: gst_rtspsrc_stream_configure_transport (gstrtspsrc.c:3113)
==29248==    by 0x85B268D: gst_rtspsrc_setup_streams (gstrtspsrc.c:5507)
==29248==    by 0x85B42DE: gst_rtspsrc_open (gstrtspsrc.c:5841)
==29248==    by 0x85B833C: gst_rtspsrc_thread (gstrtspsrc.c:6815)
==29248==    by 0x4EC4ACE: gst_task_func (gsttask.c:316)
==29248==    by 0x53EB247: g_thread_pool_thread_proxy (gthreadpool.c:309)
==29248==    by 0x53EA9E4: g_thread_proxy (gthread.c:801)
==29248==    by 0x567DE99: start_thread (pthread_create.c:308)
==29248==
Comment 1 Wim Taymans 2013-06-05 10:15:01 UTC
commit 0d27829a6bb0717aaf6f87697fdaa456b5926098
Author: Wim Taymans <wim.taymans@collabora.co.uk>
Date:   Wed Jun 5 12:12:53 2013 +0200

    udpsink: avoid leaking the host
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=701586