udpsink: avoid leaking the host

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=701586